# Player

./: CMakeLists.txt  MIDI_header.h  MIDI_header_complete_it_yourself.h  NOTES1.txt  NT.txt  Player.cpgz  a.out  buzzer.h  event_parser.h  main.c  runScript.txt
MIDI_FILES/: Opus 18 No 1 by Frederic Chopin.mid  faxeolis.mid  title.mid
Player/: CMakeLists.txt  MIDI_header.h  a.out  event_parser.h  main.c  runScript.txt
Player/MIDI_FILES/: Opus 28 No 18 Prelude by Frederic Chopin.mid  test.mid
Player/headers/: buzzer.h
Player/lib/: libportaudio.dylib
headers/: NOTES.txt  getNote.h
lib/: libsoundio.2.0.0.dylib
